Bug 1491512 - Allow rendering minimized windows on macOS. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D14567